--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,29 @@
-*~
-/*
-!/snippets*
-!/abbrev*
-!.gitignore
-!.projectile
-!personal.sh
-!README.md
-!start-init.el
-!/lisp/
-/lisp/*
-!/lisp/*.el
+ac-comphist.dat
+auto-save-list/*
+%backup%~
+backups/*
+elpa/*
+eshell/*
+gnome-terminal-colors-solarized
+ido.last
+places
+projectile-bookmarks.eld
+projectile.cache
+README.md
+recentf
+savehist
+smex-items
+sql
+sql.sql
+tramp
+url
+xflux
+xflux64.tgz
+xflux64.tgz.1
+.bashrc
+.bookmarks.el
+.emacs.desktop
+.emacs.desktop.lock
+.mc-lists.el
+.python-environments/
+.session
